Added some narrative

--- a/Final_Main.ipynb
+++ b/Final_Main.ipynb
@@ -132,8 +132,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next convert the closing prices to change in pips from the starting point.  \n",
-    "Then change the strings in TimeSig to actual date variables that matplotlib can use"
+    "Next convert the closing prices to change in pips from the starting point.\n",
+    "Then change the strings in TimeSig to actual date variables that matplotlib can use.\n",
+    "We want the changes in value of pips because what I would like to see is not the actual value of\n",
+    "the euro, but how as it changes in value compared to one currency, how it changes in value in terms of\n",
+    "another currency."
    ]
   },
   {
@@ -192,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, this data needs to be plotted, so that we can see what's happening."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -217,7 +227,7 @@
     }
    ],
    "source": [
-    "##### Plot Changes Some\n",
+    "##### Plot Changes \n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -236,6 +246,23 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion:  \n",
+    "Their does seem to be a correlation between the three pairings, following similar trends of change. However, while over the entire time period the EUR expereinced no net growth over the USD, it did compared to the GBP and  \n",
+    "especially the AUD.  \n",
+    "This brings up the question, did the AUD and GBP fall against the USD independently in that time frame? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
